// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch 1`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "addObject",
        "body": Object {
          "function": [Function],
          "nested": Object {
            "is": Object {
              "all": "fine",
            },
          },
          "some": "data",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes/some_index/batch",
}
`;

exports[`batch 2`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "updateObject",
        "body": Object {
          "and": "this is everything now",
          "objectID": "some-cool-object",
          "some": "other data",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes/some_index/batch",
}
`;

exports[`batch 3`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "partialUpdateObject",
        "body": Object {
          "objectID": "some-cool-object",
          "some": "data",
          "the": "rest is still here",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes/some_index/batch",
}
`;

exports[`batch 4`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "partialUpdateObjectNoCreate",
        "body": Object {
          "if": "it doesn't exist yet",
          "objectID": "some-cool-object",
          "this": "object",
          "won't": "be made",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes/some_index/batch",
}
`;

exports[`batch 5`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "deleteObject",
        "body": Object {
          "objectID": "some-uncool-object",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes/some_index/batch",
}
`;

exports[`batch 6`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "delete",
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes/some_index/batch",
}
`;

exports[`batch 7`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "clear",
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes/some_index/batch",
}
`;

exports[`browse 1`] = `
Object {
  "method": "GET",
  "path": "/1/indexes/some_index/browse",
  "qs": undefined,
}
`;

exports[`browse 2`] = `
Object {
  "method": "GET",
  "path": "/1/indexes/some_index/browse",
  "qs": Object {
    "hitsPerPage": 40,
  },
}
`;

exports[`browseFrom 1`] = `
Object {
  "method": "GET",
  "path": "/1/indexes/some_index/browse",
  "qs": Object {
    "cursor": "some_weirdo_cursor",
  },
}
`;

exports[`clear 1`] = `
Object {
  "method": "POST",
  "path": "/1/indexes/some_index/clear",
}
`;

exports[`contains the correct methods 1`] = `
Array [
  "batch",
  "clear",
  "copy",
  "remove",
  "browse",
  "browseFrom",
  "move",
  "search",
  "waitTask",
  "getObject",
]
`;

exports[`copy 1`] = `
Object {
  "body": Object {
    "destination": "new_index",
    "operation": "copy",
  },
  "method": "POST",
  "path": "/1/indexes/some_index/operation",
}
`;

exports[`move 1`] = `
Object {
  "body": Object {
    "destination": "new_index",
    "operation": "move",
  },
  "method": "POST",
  "path": "/1/indexes/some_index/operation",
}
`;

exports[`remove 1`] = `
Object {
  "method": "DELETE",
  "path": "/1/indexes/some_index",
}
`;

exports[`search 1`] = `
Object {
  "body": Object {
    "params": Object {},
  },
  "method": "POST",
  "path": "/1/indexes/some_index/query",
}
`;

exports[`search 2`] = `
Object {
  "body": Object {
    "params": Object {
      "hitsPerPage": 4,
    },
  },
  "method": "POST",
  "path": "/1/indexes/some_index/query",
}
`;
